--- a/app/views/registers/_form.html.erb
+++ b/app/views/registers/_form.html.erb
@@ -236,17 +236,17 @@ $(function() {
       <% rp.object.participations.build %>
       <%= rp.fields_for :participations, rp.object.participations do |participation_form| %>
         <%= participation_form.hidden_field :id, :class => "participation_id-register_play_#{rp.object.id}" %>
-        <%= participation_form.text_field :role %>
-        <%= participation_form.text_field :character %>
-        <%= participation_form.check_box :debut %>
-
+        <%= participation_form.hidden_field :role, :value => "Actor" %>
+        <label>Nom de l'acteur/actrice</label>
         <%= participation_form.select(:person_id, Person.all.map{|person| [person.full_name, person.id]}, {include_blank: true}) %>
+        <label>Rôle</label>
+        <%= participation_form.text_field :character %>
+        <label>Début?</label>
+        <%= participation_form.check_box :debut %>
     <% end %>
     </div>
   </div>
-
-
-
+  <!--
   <div class="control-group">
     <label class="control-label">Acteur/actrice</label>
     <div class="controls form-inline">
@@ -260,6 +260,7 @@ $(function() {
       <%= rp.text_field :actorrole %>
     </div>
   </div>
+  -->
   <!-- End Participation Search -->
 
   <div class="control-group">
@@ -341,8 +342,8 @@ $(function() {
     <tr>
       <th>Seating Category</th>
       <th>Tickets Sold</th>
-      <th>Price Per Ticket (Livre/Sous)</th>
-      <th>Total Take, <strong>as Recorded</strong> (Livre/Sous)</th>
+      <th>Price Per Ticket (Livre/Sous/Deniers)</th>
+      <th>Total Take, <strong>as Recorded</strong> (Livre/Sous/Deniers)</th>
     </tr>
   <thead>
 
@@ -373,10 +374,11 @@ $(function() {
   </div>
 
   <div class="control-group">
-    <label class='control-label'>Total Receipts Recorded (Livre / Sous)</label>
+    <label class='control-label'>Total Receipts Recorded (Livre / Sous / Deniers)</label>
     <div class="controls">
       <%= f.text_field :total_receipts_recorded_l, :class => 'form-inline span1' %>
       <%= f.text_field :total_receipts_recorded_s, :class => 'form-inline span1' %>
+      <%= f.text_field :total_receipts_recorded_d, :class => 'form-inline span1' %>
     </div>
   </div>
 
