Update actor menu for participations with new formatting. Add participations page to activeadmin.

--- a/app/views/registers/_form.html.erb
+++ b/app/views/registers/_form.html.erb
@@ -285,7 +285,7 @@
                 <%= rp.fields_for :participations, rp.object.participations do |participation_form| %>
                   <%= participation_form.hidden_field :id, :class => "participation_id-register_play_#{rp.object.id}" %>
                   <%= participation_form.hidden_field :role, :value => "Actor" %>
-                  <%= participation_form.select(:person_id, Person.all.map{|person| ["#{person.honorific} #{person.full_name}", person.id]}, {include_blank: "Selectionner un acteur"}) %>
+                  <%= participation_form.select(:person_id, Person.all.map{|person| ["#{person.pseudonym} #{person.honorific} #{person.last_name} #{person.first_name} #{person.alias} #{person.dates}", person.id]}, {include_blank: "Selectionner un acteur"}) %>
                   <label>Début?</label>
                   <%= participation_form.check_box :debut %>
                   <label>Rôle: </label>
