Make it possible for admins to do more in active admin.

--- a/app/views/registers/_form.html.erb
+++ b/app/views/registers/_form.html.erb
@@ -5,7 +5,7 @@
 
 <% titles = @plays.reduce([]) {|m, p| m << "#{p.id} | #{p.title} | #{p.author} | #{p.genre} | #{p.acts} | #{p.prose_vers} | #{p.prologue} | #{p.musique_danse_machine} "} %>
 <% actors = @people.reduce([]) {|m, p| m << "#{p.id} | #{p.pseudonym} #{p.honorific} #{p.last_name} #{p.first_name} #{p.alias} #{p.dates} "} %>
-<% binding.pry %>
+<%# binding.pry %>
 <%# authors = @plays.reduce([]) {|m, p| m << p.author} %>
 
 <script>
