--- a/app/views/plays/index.html.erb
+++ b/app/views/plays/index.html.erb
@@ -1,3 +1,17 @@
+<script language="javascript">
+  $().ready(function() {
+    $('#plays').facet_context();
+    $('.facet').facet();
+    $('#results').results();
+  });
+</script>
+<div id='plays'>
+  <div id='genre' class='facet'></div>
+  <div id='acts' class='facet'></div>
+  <div id='prologue' class='facet'></div>
+  <div id='results'></div>
+</div>
+
 <h2>Import Plays</h2>
 
 <%= form_tag import_plays_path, multipart: true do %>
