Actually fix play faceting results -- the other commit was to fix the AA new register form.

--- a/app/views/plays/_play.html.erb
+++ b/app/views/plays/_play.html.erb
@@ -1,5 +1,4 @@
 <div class='play'>
-  <div><%= play.title %>, , <%= play.genre %></div>
-  <div><%= play.author %></div>
+  <div><%= play.title %>, <%= play.genre %>, <%= play.author %></div>
   <div style="clear:both"></div>
 </div>
