--- a/app/views/registers/index.html.erb
+++ b/app/views/registers/index.html.erb
@@ -1,30 +1,14 @@
-<%#= render :partial => './navigation', :locals => { :highlight => :registers } %>
-
+<script language="javascript">
+  $().ready(function() {
+    $('#registers').facet_context();
+    $('.facet').facet();
+    $('#results').results();
+  });
+</script>
 <div class='row-fluid' id='registers'>
   <div class='span2 left' id='left_facets'>
     <div id='season' class='facet' title='Seasons'></div>
     <div id='weekday' class='facet' title='Weekdays'></div>
-    <div id='total_receipts_recorded_l' class='facet' title='Total Receipts (Livre)'></div>
   </div>
-
-  <div class='span6' id='results'></div>
-
-  <div class='row-fluid'>
-    <div class='span2'>
-  <% if user_signed_in? %>
-      <div id='verification_state' class='facet' title='Verification State (DUMMY DATA)'></div>
-  <% end %>
-      <div id='title1' class='facet' title='Play 1'></div>
-      <div id='author1' class='facet' title='Author 1'></div>
-    </div>
-
-    <div class='span2'>
-  <% if user_signed_in? %>
-      <div id='register_contributor_name' class='facet' title='Register Contributor/Verifier' ></div>
-  <% end %>
-      <div id='title2' class='facet' title='Play 2'></div>
-      <div id='author2' class='facet' title='Author 2'></div>
-      <!-- div id='total_receipts' class='facet' title='Total Receipts'></div -->
-    </div>
-  </div>
+  <div class='span10' id='results'></div>
 </div>
