Registers and plays now working.

--- a/app/views/plays/index.html.erb
+++ b/app/views/plays/index.html.erb
@@ -8,7 +8,7 @@
 <div id='plays'>
   <div id='genre' class='facet'></div>
   <div id='acts' class='facet'></div>
-  <div id='prologue' class='facet'></div>
+  <div id='author' class='facet'></div>
   <div id='results'></div>
 </div>
 
