Add urls to app/views/registers/index.html.erb

--- a/app/views/registers/index.html.erb
+++ b/app/views/registers/index.html.erb
@@ -3,6 +3,7 @@
     $('#registers').facet_context();
     $('.facet').facet();
     $('#results').results();
+    $('#registers').urls();
   });
 </script>
 <div class='row-fluid' id='registers'>
