--- a/app/views/registers/index.html.erb
+++ b/app/views/registers/index.html.erb
@@ -7,7 +7,9 @@
   });
 </script>
 <div class='row-fluid' id='registers'>
-  <div id='season' class='facet' title='Seasons'></div>
-  <div id='weekday' class='facet' title='Weekdays'></div>
+  <div class='span2'>
+    <div id='season' class='facet' title='Seasons'></div>
+    <div id='weekday' class='facet' title='Weekdays'></div>
+  </div>
   <div class='span10' id='results'></div>
 </div>
