--- a/app/views/plays/index.html.erb
+++ b/app/views/plays/index.html.erb
@@ -6,13 +6,15 @@
     $('#plays').urls();
   });
 </script>
-<div id='plays' class="row-fluid">
-  <div class='span2'>
+<div id='plays'>
+  <div class='row-fluid'>
+    <div class='span12'>
+    <div id='author' class='facet'></div>
     <div id='genre' class='facet'></div>
     <div id='acts' class='facet'></div>
-    <div id='author' class='facet'></div>
+    </div>
   </div>
-  <div class='span10' id='results'>
-    <div id='results'></div>
+  <div class='row-fluid'>
+    <div class='span12' id='results'></div>
   </div>
 </div>
