--- a/app/views/registers/index.html.erb
+++ b/app/views/registers/index.html.erb
@@ -1,15 +1,36 @@
 <script language="javascript">
-  $().ready(function() {
-    $('#registers').facet_context();
-    $('.facet').facet();
-    $('#results').results();
-    $('#registers').urls();
+$().ready(function() {
+  $('#registers').facet_context(function() {
+    return {
+      search: $("#search").val(),
+      limit: 10,
+      // offset: 10,
+      utf8: "%E2%9C%93"
+    }
   });
+
+  $('.facet').facet();
+  $('.nested_facet').nested_facet();
+  $('#results').results({
+    limit: 10,
+    // offset: 0
+  });
+  $('#registers').urls();
+});
+
 </script>
-<div class='row-fluid' id='registers'>
-  <div class='span2'>
-    <div id='season' class='facet' title='Seasons'></div>
-    <div id='weekday' class='facet' title='Weekdays'></div>
+<div id='registers'>
+  <div class='row-fluid'>
+    <div class='span12'>
+      <div id='season' class='facet' title='Saison'></div>
+      <div id='weekday' class='facet' title='Jour de la semaine'></div>
+      <div id='title1' class='facet' title='Pièce 1'></div>
+      <div id='author1' class='facet' title='Auteur 1'></div>
+      <div id='title2' class='facet' title='Pièce 2'></div>
+      <div id='author2' class='facet' title='Auteur 2'></div>
+    </div>
   </div>
-  <div class='span10' id='results'></div>
+  <div class='row-fluid'>
+    <div class='span9' id='results'></div>
+  </div>
 </div>
