--- a/app/views/people/index.html.erb
+++ b/app/views/people/index.html.erb
@@ -1,6 +1,22 @@
-<h2>Import People</h2>
-
-<%= form_tag import_people_path, multipart: true do %>
-  <%= file_field_tag :file %>
-  <%= submit_tag "Import" %>
-<% end %>
+<script language="javascript">
+  $().ready(function() {
+    $('#people').facet_context();
+    $('.facet').facet();
+    $('#results').results();
+  });
+</script>
+<div id='people'>
+  <div class='row-fluid'>
+    <div class='span12'>
+    <div id='pseudonym' class='facet'></div>
+    <div id='alias' class='facet'></div>
+    <div id='last_name' class='facet'></div>
+    <div id='honorific' class='facet'></div>
+    </div>
+  </div>
+  <div class='row-fluid'>
+    <div class='span12' id='results'></div>
+  </div>
+</div>
+<!-- :first_name, :full_name, :honorific,
+  :last_name, :pseudonym, :url, :alias, :societaire_pensionnaire, :dates -->
