WIP Import Last Six Seasons.

--- a/app/views/registers/_form.html.erb
+++ b/app/views/registers/_form.html.erb
@@ -103,6 +103,7 @@
                   <li><a class='front' href="">Page de droite</a></li>
                   <li class="pull-right">
                       <%= link_to "Open Flip Book in New Window", "http://hyperstudio.mit.edu/cfrp/flip_books/R#{@register.volume_number}/index.html#page/#{@register.rhp_image_number}/mode/2up", :target => 'top' %>
+                      <%= binding.pry %>
                   </li>
                 </ul>
               </div>
